Fix shift mixin to respect rtl.

--- a/_sass/mcgriddle/mixins/_shift.scss
+++ b/_sass/mcgriddle/mixins/_shift.scss
@@ -2,7 +2,13 @@
 // Shift
 // ==================================================
 @mixin shift($_columns: 1, $_percent: true) {
+  $_margin: left;
+
+  @if $grid-rtl == true {
+    $_margin: right;
+  }
+
   $_shift: column-width($_columns, $_percent) + gutter-width($_percent);
 
-  margin-left: $_shift;
+  margin-#{$_margin}: $_shift;
 }
